--- a/app/views/top_sections/new.html.erb
+++ b/app/views/top_sections/new.html.erb
@@ -1,31 +1,9 @@
-<h1>New top_section</h1>
+<h2><%= link_to l(:label_top_section_plural), top_sections_path %> &#187; <%= l(:label_top_section_new) %></h2>
 
-<% form_for(@top_section) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :sezione_top %><br />
-    <%= f.text_field :sezione_top %>
-  </p>
-  <p>
-    <%= f.label :ordinamento %><br />
-    <%= f.text_field :ordinamento %>
-  </p>
-  <p>
-    <%= f.label :se_visibile %><br />
-    <%= f.check_box :se_visibile %>
-  </p>
-  <p>
-    <%= f.label :immagine %><br />
-    <%= f.text_field :immagine %>
-  </p>
-  <p>
-    <%= f.label :style %><br />
-    <%= f.text_field :style %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
+<% labelled_form_for @top_section do |f| %>
+<%= render :partial => 'form', :locals => { :f => f } %>
+<p>
+  <%= f.submit l(:button_create) %>
+  <%= f.submit l(:button_create_and_continue), :name => 'continue' %>
+</p>
 <% end %>
-
-<%= link_to 'Back', top_sections_path %>
