--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -1,27 +1,9 @@
-<h1>New section</h1>
+<h2><%= link_to l(:label_section_plural), sections_path %> &#187; <%= l(:label_section_new) %></h2>
 
-<% form_for(@section) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :sezione %><br />
-    <%= f.text_field :sezione %>
-  </p>
-  <p>
-    <%= f.label :protetto %><br />
-    <%= f.check_box :protetto %>
-  </p>
-  <p>
-    <%= f.label :ordinamento %><br />
-    <%= f.text_field :ordinamento %>
-  </p>
-  <p>
-    <%= f.label :top_section_id %><br />
-    <%= f.text_field :top_section_id %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
+<% labelled_form_for @section do |f| %>
+<%= render :partial => 'form', :locals => { :f => f } %>
+<p>
+  <%= f.submit l(:button_create) %>
+  <%= f.submit l(:button_create_and_continue), :name => 'continue' %>
+</p>
 <% end %>
-
-<%= link_to 'Back', sections_path %>
