--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,23 +1,33 @@
-<p>
-  <b>sezione:</b>
-  <%=h @section.sezione %>
-</p>
+<div class="contextual">
+<%= link_to(l(:button_edit), edit_section_path(@section), :class => 'icon icon-edit') if User.current.admin? %>
+<%= link_to(l(:button_delete),
+      section_path(@section),
+      :confirm => l(:text_are_you_sure),
+      :method => :delete,
+      :class => 'icon icon-del') if User.current.admin? %>
+</div>
+<h2><%= link_to l(:label_section_plural), sections_path %> &#187; <%=h @section %></h2>
 
-<p>
-  <b>protetto:</b>
-  <%=h @section.protetto %>
-</p>
+<div class="splitcontentleft">
 
-<p>
-  <b>ordinamento:</b>
-  <%=h @section.ordinamento %>
-</p>
+<fieldset class="box tabular">
+  <legend><%=l(:label_section)%></legend>
 
-<p>
-  <b>top_section_id:</b>
-  <%=h @section.top_section_id %>
-</p>
+        <p>
+        <% unless @section.sezione.blank? %>
+            <em><%=h @section.sezione %></em>
+            <br />
+        <% end %>
+        </p>
+        <p>
+            <%=h @section.top_section %>
+        </p>
+        <p>
+            <%= l(:label_ordinamento) %>: <%=h @section.ordinamento %>
+        </p>
+        <p>
+            <%= check_box_tag l(:label_protetto), 1, @section.protetto, :disabled => 'disabled'  %> <%= l(:label_protetto) %>  
 
-
-<%= link_to 'Edit', edit_section_path(@section) %> |
-<%= link_to 'Back', sections_path %>
+        </p>
+</fieldset>
+</div>
