--- a/app/views/top_sections/index.html.erb
+++ b/app/views/top_sections/index.html.erb
@@ -7,7 +7,7 @@
 <% if @top_sections.any? %>
 <table class="list top_sections">
   <thead><tr>
-  <%= sort_header_tag('sezione_top', :title => l(:label_top_section), :style => 'width: 40%;')%>
+  <%= sort_header_tag('sezione_top', :title => l(:label_top_section), :style => 'width: 40%;text-align:left;')%>
   <%= sort_header_tag('ordinamento', :title => l(:label_ordinamento), :style => 'color:red; width: 10%;')%>
   <th style='width: 20%;'><%= l(:label_immagine)%></th>
   <%= sort_header_tag('style', :title => l(:label_style), :style => 'width: 10%;')%>
@@ -21,7 +21,7 @@
     <td align="right"><%=h top_section.ordinamento %></td>
     <td><%=h top_section.immagine %></td>
     <td align="center"><%=h top_section.style %></td>
-    <td align="center"><%=h top_section.se_visibile %></td>
+    <td align="center"><%= check_box_tag l(:label_private), 1, top_section.se_visibile, :disabled => 'disabled' %></td>
     <td class="buttons"><%= link_to l(:button_delete), top_section, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del' %></td>
   </tr>
 <% end %>
