--- a/app/views/assos/index.html.erb
+++ b/app/views/assos/index.html.erb
@@ -1,42 +1,42 @@
-<h1>Listing assos</h1>
+<div class="contextual">
+<%= link_to l(:label_asso_new), new_asso_path, :class => 'icon icon-add' %>
+</div>
 
-<table>
-  <tr>
-    <th>ragione_sociale</th>
-    <th>indirizzo</th>
-    <th>email</th>
-    <th>presidente</th>
-    <th>referente</th>
-    <th>consulente</th>
-    <th>logo</th>
-    <th>telefono</th>
-    <th>telefono_alt</th>
-    <th>fax</th>
-    <th>comunicazioni</th>
-    <th>email_alt</th>
-  </tr>
+<h2><%= l(:label_asso_plural) %></h2>
 
+<% if @assos.any? %>
+<table class="list assos">
+  <thead><tr>
+  <%= sort_header_tag('ragione_sociale', :title => l(:label_ragione_sociale), :style => 'width: 10%;text-align:left;')%>
+  <%= sort_header_tag('email', :title => l(:label_email), :style => 'width: 10%;text-align:left;')%>
+  <%= sort_header_tag('indirizzo', :title => l(:label_indirizzo), :style => 'width: 10%;text-align:left;')%>
+  <%= sort_header_tag('presidente', :title => l(:label_presidente), :style => 'width: 10%;text-align:left;')%>
+  <%= sort_header_tag('referente', :title => l(:label_referente), :style => 'width: 10%;text-align:left;')%>
+  <%= sort_header_tag('consulente', :title => l(:label_consulente), :style => 'width: 10%;text-align:left;')%>
+  <%= sort_header_tag('logo', :title => l(:label_logo), :style => 'width: 10%;text-align:left;')%>
+  <%= sort_header_tag('telefono', :title => l(:label_telefono), :style => 'width: 10%;text-align:left;')%>
+  <%= sort_header_tag('fax', :title => l(:label_fax), :style => 'width: 10%;text-align:left;')%>
+  <th style='width: 10%;'></th>
+  </tr></thead>
+  <tbody>
 <% @assos.each do |asso| %>
-  <tr>
-    <td><%=h asso.ragione_sociale %></td>
-    <td><%=h asso.indirizzo %></td>
+  <tr class="<%= cycle 'odd', 'even' %>">
+    <td><%= link_to h(asso), edit_asso_path(asso) %></td>
     <td><%=h asso.email %></td>
+    <td><%=h asso.indirizzo %></td>
     <td><%=h asso.presidente %></td>
     <td><%=h asso.referente %></td>
     <td><%=h asso.consulente %></td>
     <td><%=h asso.logo %></td>
     <td><%=h asso.telefono %></td>
-    <td><%=h asso.telefono_alt %></td>
     <td><%=h asso.fax %></td>
-    <td><%=h asso.comunicazioni %></td>
-    <td><%=h asso.email_alt %></td>
-    <td><%= link_to 'Show', asso %></td>
-    <td><%= link_to 'Edit', edit_asso_path(asso) %></td>
-    <td><%= link_to 'Destroy', asso, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td class="buttons"><%= link_to l(:button_delete), asso, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del' %></td>
   </tr>
 <% end %>
 </table>
 
-<br />
+<p class="pagination"><%= pagination_links_full @asso_pages, @asso_count %></p>
 
-<%= link_to 'New asso', new_asso_path %>
+<% else %>
+<p class="nodata"><%= l(:label_no_data) %></p>
+<% end %>
