--- a/app/views/group_banners/index.html.erb
+++ b/app/views/group_banners/index.html.erb
@@ -1,40 +1,45 @@
-<h1>Listing group_banners</h1>
+<div class="contextual">
+<%= link_to l(:label_group_banner_new), new_group_banner_path, :class => 'icon icon-add' %>
+</div>
 
-<table>
-  <tr>
-    <th>espositore</th>
-    <th>URL</th>
-    <th>priorita</th>
-    <th>posizione</th>
-    <th>se_visibile</th>
-    <th>banner</th>
-    <th>impressions</th>
-    <th>clicks</th>
-    <th>didascalia</th>
-    <th>se_prima_pagina</th>
-    <th>impressions_history</th>
-  </tr>
+<h2><%= l(:label_group_banner_plural) %></h2>
 
+<% if @group_banners.any? %>
+<table class="list group_banners">
+  <thead><tr>
+  <%= sort_header_tag('espositore', :title => l(:label_espositore), :style => 'width: 10%;text-align:left;')%>
+  <%= sort_header_tag('url', :title => l(:label_url), :style => 'width: 10%;text-align:left;')%>
+  <%= sort_header_tag('priorita', :title => l(:label_priorita_abrv), :style => 'width: 20px;text-align:right;')%>
+  <%= sort_header_tag('posizione', :title => l(:label_posizione), :style => 'width: 10%;text-align:left;')%>
+  <%= sort_header_tag('se_visibile', :title => l(:label_se_visibile_abrv), :style => 'width: 20px;text-align:right;')%>
+  <%= sort_header_tag('banner', :title => l(:label_banner), :style => 'width: 10%;text-align:left;')%>
+  <%= sort_header_tag('impressions', :title => l(:label_impressions_abrv), :style => 'width: 20px;')%>
+  <%= sort_header_tag('clicks', :title => l(:label_clicks), :style => 'width: 20px;')%>
+  <%= sort_header_tag('se_prima_pagina', :title => l(:label_se_prima_pagina_abrv), :style => 'width: 20px;text-align:right;')%>
+  <%= sort_header_tag('impressions_history', :title => l(:label_impressions_history_abrv), :style => 'width: 20px;')%>
+  <th style='width: 10%;'></th>
+  </tr></thead>
+  <tbody>
 <% @group_banners.each do |group_banner| %>
-  <tr>
-    <td><%=h group_banner.espositore %></td>
+  <tr class="<%= cycle 'odd', 'even' %>">
+    <td><%= link_to h(group_banner), edit_group_banner_path(group_banner) %></td>
     <td><%=h group_banner.url %></td>
-    <td><%=h group_banner.priorita %></td>
+    <td style="text-align: right;"><%=h group_banner.priorita %></td>
     <td><%=h group_banner.posizione %></td>
-    <td><%=h group_banner.se_visibile %></td>
+    <td align="center"><%= check_box_tag '', 1, group_banner.se_visibile, :disabled => 'disabled' %></td>
     <td><%=h group_banner.banner %></td>
-    <td><%=h group_banner.impressions %></td>
-    <td><%=h group_banner.clicks %></td>
-    <td><%=h group_banner.didascalia %></td>
-    <td><%=h group_banner.se_prima_pagina %></td>
-    <td><%=h group_banner.impressions_history %></td>
-    <td><%= link_to 'Show', group_banner %></td>
-    <td><%= link_to 'Edit', edit_group_banner_path(group_banner) %></td>
-    <td><%= link_to 'Destroy', group_banner, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td style="text-align: right;"><%=h group_banner.impressions %></td>
+    <td style="text-align: right;"><%=h group_banner.clicks %></td>
+    <td align="center"><%= check_box_tag '', 1, group_banner.se_prima_pagina, :disabled => 'disabled' %></td>
+    <td style="text-align: right;"><%=h group_banner.impressions_history %></td>
+    <td class="buttons"><%= link_to l(:button_delete), group_banner, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del' %></td>
   </tr>
 <% end %>
 </table>
 
-<br />
+<p class="pagination"><%= pagination_links_full @group_banner_pages, @group_banner_count %></p>
 
-<%= link_to 'New group_banner', new_group_banner_path %>
+<% else %>
+<p class="nodata"><%= l(:label_no_data) %></p>
+<% end %>
+
