--- a/app/views/assos/_form.html.erb
+++ b/app/views/assos/_form.html.erb
@@ -1,9 +1,26 @@
 <%= f.error_messages %>
 
 <div class="box tabular">
-  <p><%= f.text_field :sezione_top, :label => :field_top_section, :required => true, :size => 60 %></p>
-  <p><%= f.text_field :ordinamento, :label => :field_ordinamento, :size => 3 %></p>
-  <p><%= f.text_field :immagine, :label => :field_immagine %></p>
-  <p><%= f.text_field :style, :label => :field_style %></p>
-  <p><%= f.check_box :se_visibile, :label => :field_se_visibile %></p>
+
+  <p>Organismi Associati<= f.select :organization_id???, (Organization.all.collect {|c| [c.name, c.id]}), :include_blank => true, :required => true, :size => 60, :title => l(:label_organization) ></p>  
+    <p><%= f.text_field :ragione_sociale, :label => :field_ragione_sociale, :required => true, :size => 40 %></p>
+  <p><%= f.text_field :indirizzo, :label => :field_indirizzo, :size => 50 %></p>
+  <p><%= f.text_field :email, :label => :field_email, :required => true, :size => 20 %></p>
+  <p><%= f.text_field :presidente, :label => :field_presidente, :size => 40  %></p>
+  <p><%= f.text_field :consulente, :label => :field_consulente, :size => 40  %></p>
+  <p><%= f.text_field :logo, :label => :field_logo, :size => 40  %></p>
+  <p><%= f.text_field :telefono, :label => :field_telefono, :size => 40  %></p>
+  <p><%= f.text_field :telefono_alt, :label => :field_telefono_alt, :size => 40  %></p>
+  <p><%= f.text_field :fax, :label => :field_fax, :fax => 40  %></p>
+  <p><%= f.text_area :comunicazioni, :label => :field_comunicazioni %></p>
+  <p><%= f.text_field :email_alt, :label => :field_email_alt, :size => 20 %></p>
 </div>
+
+
+gestione validazione email su asso
+vedere delete va in errore 
+Logo è un imagine? 
+
+
+
+
