--- a/app/views/assos/new.html.erb
+++ b/app/views/assos/new.html.erb
@@ -1,59 +1,11 @@
-<h1>New asso</h1>
+<h2><%= link_to l(:label_asso_plural), assos_path %> &#187; <%= l(:label_asso_new) %></h2>
 
-<% form_for(@asso) do |f| %>
-  <%= f.error_messages %>
+<% labelled_form_for @asso do |f| %>
 
-  <p>
-    <%= f.label :ragione_sociale %><br />
-    <%= f.text_field :ragione_sociale %>
-  </p>
-  <p>
-    <%= f.label :indirizzo %><br />
-    <%= f.text_field :indirizzo %>
-  </p>
-  <p>
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </p>
-  <p>
-    <%= f.label :presidente %><br />
-    <%= f.text_field :presidente %>
-  </p>
-  <p>
-    <%= f.label :referente %><br />
-    <%= f.text_field :referente %>
-  </p>
-  <p>
-    <%= f.label :consulente %><br />
-    <%= f.text_field :consulente %>
-  </p>
-  <p>
-    <%= f.label :logo %><br />
-    <%= f.text_field :logo %>
-  </p>
-  <p>
-    <%= f.label :telefono %><br />
-    <%= f.text_field :telefono %>
-  </p>
-  <p>
-    <%= f.label :telefono_alt %><br />
-    <%= f.text_field :telefono_alt %>
-  </p>
-  <p>
-    <%= f.label :fax %><br />
-    <%= f.text_field :fax %>
-  </p>
-  <p>
-    <%= f.label :comunicazioni %><br />
-    <%= f.text_area :comunicazioni %>
-  </p>
-  <p>
-    <%= f.label :email_alt %><br />
-    <%= f.text_field :email_alt %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
+<%= render :partial => 'form', :locals => { :f => f } %>
+
+<p>
+  <%= f.submit l(:button_create) %>
+  <%= f.submit l(:button_create_and_continue), :name => 'continue' %>
+</p>
 <% end %>
-
-<%= link_to 'Back', assos_path %>
