--- a/app/views/cross_groups/new.html.erb
+++ b/app/views/cross_groups/new.html.erb
@@ -1,23 +1,11 @@
-<h1>New cross_group</h1>
+<h2><%= link_to l(:label_cross_group_plural), cross_groups_path %> &#187; <%= l(:label_cross_group_new) %></h2>
 
-<% form_for(@cross_group) do |f| %>
-  <%= f.error_messages %>
+<% labelled_form_for @cross_group do |f| %>
 
-  <p>
-    <%= f.label :asso_id %><br />
-    <%= f.text_field :asso_id %>
-  </p>
-  <p>
-    <%= f.label :group_banner_id %><br />
-    <%= f.text_field :group_banner_id %>
-  </p>
-  <p>
-    <%= f.label :se_visibile %><br />
-    <%= f.check_box :se_visibile %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
+<%= render :partial => 'form', :locals => { :f => f } %>
+
+<p>
+  <%= f.submit l(:button_create) %>
+  <%= f.submit l(:button_create_and_continue), :name => 'continue' %>
+</p>
 <% end %>
-
-<%= link_to 'Back', cross_groups_path %>
