--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -11,16 +11,18 @@
   <%= sort_header_tag('top_sezione_name', :title => l(:label_top_section), :style => 'width: 40%;text-align:left;')%>
   <%= sort_header_tag('ordinamento', :title => l(:label_ordinamento), :style => 'color:red; width: 10%;')%>
   <%= sort_header_tag('protetto', :title => l(:label_protetto), :style => 'width: 10%;')%>
-  <th style='width: 10%;'></th>
+  <th style='width: 5%;'></th>
+  <th style='width: 5%;'></th>
   </tr></thead>
   <tbody>
 <% @sections.each do |section| %>
   <tr class="<%= cycle 'odd', 'even' %>">
-    <td><%= link_to h(section), edit_section_path(section) %></td>
-    <td><%= link_to h(section.top_section), edit_top_section_path(section.top_section, :id => section.top_section_id) %></td>
+    <td><%= link_to h(section), section_path(section) %></td>
+    <td><%= link_to h(section.top_section), top_section_path(section.top_section, :id => section.top_section_id) %></td>
     <td align="right"><%=h section.ordinamento %></td>
     <td align="center"><%= check_box_tag '', 1, section.protetto, :disabled => 'disabled' %></td>
-    <td class="buttons"><%= link_to l(:button_delete), section, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del' %></td>
+    <td class="buttons"><%= link_to('', edit_section_path(section), :class => 'icon icon-edit') if User.current.admin? %></td>
+    <td class="buttons"><%= link_to ('', section, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del') if User.current.admin? %></td>
   </tr>
 <% end %>
 </table>
