--- a/app/views/top_sections/index.html.erb
+++ b/app/views/top_sections/index.html.erb
@@ -12,17 +12,19 @@
   <th style='width: 20%;'><%= l(:label_immagine)%></th>
   <%= sort_header_tag('style', :title => l(:label_style), :style => 'width: 10%;')%>
   <%= sort_header_tag('se_visibile', :title => l(:label_se_visibile), :style => 'width: 10%;')%>
-  <th style='width: 10%;'></th>
+  <th style='width: 5%;'></th>
+  <th style='width: 5%;'></th>
   </tr></thead>
   <tbody>
 <% @top_sections.each do |top_section| %>
   <tr class="<%= cycle 'odd', 'even' %>">
-    <td><%= link_to h(top_section), edit_top_section_path(top_section) %></td>
+    <td><%= link_to h(top_section), top_section_path(top_section) %></td>
     <td align="right"><%=h top_section.ordinamento %></td>
     <td><%=h top_section.immagine %></td>
     <td align="center"><%=h top_section.style %></td>
     <td align="center"><%= check_box_tag l(:label_private), 1, top_section.se_visibile, :disabled => 'disabled' %></td>
-    <td class="buttons"><%= link_to l(:button_delete), top_section, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del' %></td>
+    <td class="buttons"><%= link_to('', edit_top_section_path(top_section), :class => 'icon icon-edit') if User.current.admin? %></td>
+    <td class="buttons"><%= link_to ('', top_section, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del') if User.current.admin? %></td>
   </tr>
 <% end %>
 </table>
